--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,11 @@ data_ingestion:
   source_URL: give the url of the dataset where it is store
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+
+prepare_base_model:
+  root_dir: artifacts/prepare_base_model
+  base_model_path: artifacts/prepare_base_model/base_model.h5
+  updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+
+
